--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bootstrap": "^4.1.3",
     "classnames": "^2.2.6",
     "gh-pages": "^1.2.0",
+    "mdbreact": "^4.6.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-router-dom": "^4.3.1",
